# malloc

./: CMakeLists.txt  Makefile  README.md  a.out  author  correction.txt  dbug.c  libmalloc.version  main  main.c  main1.c  main2.c  main3.c  main4.c  main5.c  main6.c  run.sh  test  test0  test0.c  test1  test1.c  test2  test2.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
incl/: malloc.h
libft_malloc_OSTTYPE.dSYM/Contents/: Info.plist
libft_malloc_OSTTYPE.dSYM/Contents/Resources/DWARF/: libft_malloc_OSTTYPE
libft_malloc_OSTTYPE.so.dSYM/Contents/: Info.plist
libft_malloc_Testing.so.dSYM/Contents/: Info.plist
libft_malloc_x86_64_Darwin.so.dSYM/Contents/: Info.plist
src/: allocator.c  calloc.c  clean.c  find_block.c  free.c  hashmap.c  malloc.c  optimize.c  realloc.c  show_alloc_mem.c  struct_init.c  utility.c
test0.dSYM/Contents/Resources/DWARF/: test0
test2.dSYM/Contents/Resources/DWARF/: test2
