cmake_minimum_required(VERSION 3.9)
project(malloc)

set(CMAKE_CXX_STANDARD 11)

add_executable(malloc
        incl/malloc.h
        libft/incl/bool.h
        libft/incl/char.h
        libft/incl/cnvrsn.h
        libft/incl/gnl.h
        libft/incl/lst.h
        libft/incl/mem.h
        libft/incl/num.h
        libft/incl/printf.h
        libft/incl/put.h
        libft/incl/str.h
        libft/incl/tbl.h
        libft/src/ft_printf/ft_printf.c
        libft/src/ft_printf/pf_cast_di.c
        libft/src/ft_printf/pf_cast_oux.c
        libft/src/ft_printf/pf_ihelp.c
        libft/src/ft_printf/pf_initstructs.c
        libft/src/ft_printf/pf_is.c
        libft/src/ft_printf/pf_itoabse.c
        libft/src/ft_printf/pf_mod.c
        libft/src/ft_printf/pf_print_c.c
        libft/src/ft_printf/pf_print_i.c
        libft/src/ft_printf/pf_print_o.c
        libft/src/ft_printf/pf_print_p.c
        libft/src/ft_printf/pf_print_perc.c
        libft/src/ft_printf/pf_print_s.c
        libft/src/ft_printf/pf_print_x.c
        libft/src/ft_printf/pf_putchar.c
        libft/src/ft_printf/pf_puterror.c
        libft/src/ft_printf/pf_putnbr.c
        libft/src/ft_printf/pf_putstr.c
        libft/src/ft_printf/pf_tick.c
        libft/src/ft_printf/pf_typechr.c
        libft/src/ft_printf/pf_width.c
        libft/src/futil/gnl/gnl.c
        libft/src/primitive/char/ft_isalnum.c
        libft/src/primitive/char/ft_isalpha.c
        libft/src/primitive/char/ft_isascii.c
        libft/src/primitive/char/ft_isdigit.c
        libft/src/primitive/char/ft_islower.c
        libft/src/primitive/char/ft_isprint.c
        libft/src/primitive/char/ft_isspc.c
        libft/src/primitive/char/ft_isupper.c
        libft/src/primitive/cnvrsn/ft_atoi.c
        libft/src/primitive/cnvrsn/ft_itoa.c
        libft/src/primitive/cnvrsn/ft_itoabse.c
        libft/src/primitive/mem/ft_bzero.c
        libft/src/primitive/mem/ft_memalloc.c
        libft/src/primitive/mem/ft_memccpy.c
        libft/src/primitive/mem/ft_memchr.c
        libft/src/primitive/mem/ft_memcmp.c
        libft/src/primitive/mem/ft_memcpy.c
        libft/src/primitive/mem/ft_memdel.c
        libft/src/primitive/mem/ft_memmove.c
        libft/src/primitive/mem/ft_memset.c
        libft/src/primitive/num/ft_numlen.c
        libft/src/primitive/put/ft_putchar.c
        libft/src/primitive/put/ft_putchar_fd.c
        libft/src/primitive/put/ft_putclst.c
        libft/src/primitive/put/ft_putendl.c
        libft/src/primitive/put/ft_putendl_fd.c
        libft/src/primitive/put/ft_puterror.c
        libft/src/primitive/put/ft_putnbr.c
        libft/src/primitive/put/ft_putnbr_fd.c
        libft/src/primitive/put/ft_putnlst.c
        libft/src/primitive/put/ft_putstr.c
        libft/src/primitive/put/ft_putstr_fd.c
        libft/src/primitive/put/ft_putstrrev.c
        libft/src/primitive/put/ft_puttbl.c
        libft/src/primitive/str/ft_cntbnespc.c
        libft/src/primitive/str/ft_cntbspc.c
        libft/src/primitive/str/ft_cnttotspc.c
        libft/src/primitive/str/ft_cntwrds.c
        libft/src/primitive/str/ft_dirjoin.c
        libft/src/primitive/str/ft_isstralnum.c
        libft/src/primitive/str/ft_isstralpha.c
        libft/src/primitive/str/ft_isstrascii.c
        libft/src/primitive/str/ft_isstrdigit.c
        libft/src/primitive/str/ft_isstrprint.c
        libft/src/primitive/str/ft_nxtwrdlen.c
        libft/src/primitive/str/ft_strcat.c
        libft/src/primitive/str/ft_strchr.c
        libft/src/primitive/str/ft_strclr.c
        libft/src/primitive/str/ft_strcmp.c
        libft/src/primitive/str/ft_strcpy.c
        libft/src/primitive/str/ft_strdel.c
        libft/src/primitive/str/ft_strdup.c
        libft/src/primitive/str/ft_strequ.c
        libft/src/primitive/str/ft_striter.c
        libft/src/primitive/str/ft_striteri.c
        libft/src/primitive/str/ft_strjoin.c
        libft/src/primitive/str/ft_strlcat.c
        libft/src/primitive/str/ft_strlen.c
        libft/src/primitive/str/ft_strmap.c
        libft/src/primitive/str/ft_strmapi.c
        libft/src/primitive/str/ft_strncat.c
        libft/src/primitive/str/ft_strncmp.c
        libft/src/primitive/str/ft_strncpy.c
        libft/src/primitive/str/ft_strndup.c
        libft/src/primitive/str/ft_strnequ.c
        libft/src/primitive/str/ft_strnew.c
        libft/src/primitive/str/ft_strnstr.c
        libft/src/primitive/str/ft_strrchr.c
        libft/src/primitive/str/ft_strrev.c
        libft/src/primitive/str/ft_strsplit.c
        libft/src/primitive/str/ft_strstr.c
        libft/src/primitive/str/ft_strstrip.c
        libft/src/primitive/str/ft_strsub.c
        libft/src/primitive/str/ft_strtrim.c
        libft/src/primitive/str/ft_tolower.c
        libft/src/primitive/str/ft_toupper.c
        libft/src/primitive/tbl/ft_crafttbl.c
        libft/src/primitive/tbl/ft_itbllen.c
        libft/src/primitive/tbl/ft_tbladdl.c
        libft/src/primitive/tbl/ft_tblcnew.c
        libft/src/primitive/tbl/ft_tbldel.c
        libft/src/primitive/tbl/ft_tbldup.c
        libft/src/primitive/tbl/ft_tbllen.c
        libft/src/primitive/tbl/ft_tblnnew.c
        libft/src/primitive/tbl/ft_tblrepline.c
        libft/src/primitive/tbl/ft_tblrmline.c
        libft/src/typedefined/lst/ft_lstadd.c
        libft/src/typedefined/lst/ft_lstdel.c
        libft/src/typedefined/lst/ft_lstdelone.c
        libft/src/typedefined/lst/ft_lstdup.c
        libft/src/typedefined/lst/ft_lsteadd.c
        libft/src/typedefined/lst/ft_lstiter.c
        libft/src/typedefined/lst/ft_lstlen.c
        libft/src/typedefined/lst/ft_lstmap.c
        libft/src/typedefined/lst/ft_lstnew.c
        libft/src/typedefined/lst/ft_lstnewstak.c
        src/allocator.c
        src/calloc.c
        src/find_block.c
        src/free.c
        src/malloc.c
        src/realloc.c
        src/show_alloc_mem.c
        src/struct_init.c
        main.c)
